crates/isobmff/src/snapshots/isobmff__conformance_tests__a6_tone_multifile.mp4.snap
---
source: crates/isobmff/src/conformance_tests.rs
expression: redeserialized_file
snapshot_kind: text
---
IsobmffFile {
    ftyp: Some(
        FileTypeBox {
            major_brand: Brand([109, 112, 52, 50]),
            minor_version: 0,
            compatible_brands: [
                Brand([109, 112, 52, 50]),
                Brand::IsoM,
            ],
        },
    ),
    etyp: [],
    otyp: [],
    pdin: None,
    moov: Some(
        MovieBox {
            mvhd: MovieHeaderBox {
                full_header: FullBoxHeader {
                    version: 0,
                    flags: U24Be(
                        0,
                    ),
                },
                creation_time: 3231946847,
                modification_time: 3231946847,
                timescale: 600,
                duration: 614,
                rate: 1,
                volume: 1,
                reserved1: 0,
                reserved2: 0,
                matrix: [
                    65536,
                    0,
                    0,
                    0,
                    65536,
                    0,
                    0,
                    0,
                    1073741824,
                ],
                pre_defined: [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                ],
                next_track_id: 2,
            },
            meta: None,
            trak: [
                TrackBox {
                    tkhd: TrackHeaderBox {
                        version: 0,
                        flags: TrackHeaderBoxFlags(
                            TrackEnabled | TrackInMovie | TrackInPreview,
                        ),
                        creation_time: 3231946847,
                        modification_time: 3231946847,
                        track_id: 1,
                        reserved1: 0,
                        duration: 614,
                        reserved2: 0,
                        layer: 0,
                        alternate_group: 0,
                        volume: 1,
                        reserved3: 0,
                        matrix: [
                            65536,
                            0,
                            0,
                            0,
                            65536,
                            0,
                            0,
                            0,
                            1073741824,
                        ],
                        width: 0,
                        height: 0,
                    },
                    tref: None,
                    trgr: None,
                    edts: None,
                    ttyp: None,
                    meta: None,
                    mdia: MediaBox {
                        mdhd: MediaHeaderBox {
                            full_header: FullBoxHeader {
                                version: 0,
                                flags: U24Be(
                                    0,
                                ),
                            },
                            creation_time: 3231946847,
                            modification_time: 3231946847,
                            timescale: 48000,
                            duration: 49152,
                            language: Langauge(
                                [
                                    21,
                                    14,
                                    4,
                                ],
                            ),
                            pre_defined: 0,
                        },
                        hdlr: HandlerBox {
                            full_header: FullBoxHeader {
                                version: 0,
                                flags: U24Be(
                                    0,
                                ),
                            },
                            pre_defined: 0,
                            handler_type: HandlerType::Audio,
                            reserved: [
                                0,
                                0,
                                0,
                            ],
                            name: Utf8String(
                                "soun",
                            ),
                        },
                        elng: None,
                        minf: MediaInformationBox {
                            vmhd: None,
                            smhd: Some(
                                SoundMediaHeaderBox {
                                    full_header: FullBoxHeader {
                                        version: 0,
                                        flags: U24Be(
                                            0,
                                        ),
                                    },
                                    balance: 0,
                                    reserved: 0,
                                },
                            ),
                            hmhd: None,
                            sthd: None,
                            vvhd: None,
                            unknown_boxes: [],
                            dinf: DataInformationBox {
                                dref: DataReferenceBox {
                                    full_header: FullBoxHeader {
                                        version: 0,
                                        flags: U24Be(
                                            0,
                                        ),
                                    },
                                    entry_count: 2,
                                    url: [
                                        DataEntryUrlBox {
                                            full_header: FullBoxHeader {
                                                version: 0,
                                                flags: U24Be(
                                                    1,
                                                ),
                                            },
                                            location: None,
                                        },
                                        DataEntryUrlBox {
                                            full_header: FullBoxHeader {
                                                version: 0,
                                                flags: U24Be(
                                                    0,
                                                ),
                                            },
                                            location: Some(
                                                Utf8String(
                                                    "./myData.dat",
                                                ),
                                            ),
                                        },
                                    ],
                                    urn: [],
                                    imda: [],
                                    snim: [],
                                    unknown_boxes: [],
                                },
                            },
                            stbl: SampleTableBox {
                                stsd: SampleDescriptionBox {
                                    full_header: FullBoxHeader {
                                        version: 0,
                                        flags: U24Be(
                                            0,
                                        ),
                                    },
                                    entry_count: 1,
                                    boxes: [
                                        UnknownBox {
                                            header: BoxHeader {
                                                size: Short(
                                                    97,
                                                ),
                                                box_type: FourCc(
                                                    "mp4a",
                                                ),
                                            },
                                            data.len: 89,
                                        },
                                    ],
                                },
                                stts: TimeToSampleBox {
                                    full_header: FullBoxHeader {
                                        version: 0,
                                        flags: U24Be(
                                            0,
                                        ),
                                    },
                                    entry_count: 1,
                                    entries: [
                                        TimeToSampleBoxEntry {
                                            sample_count: 48,
                                            sample_delta: 1024,
                                        },
                                    ],
                                },
                                ctts: None,
                                cslg: None,
                                stsc: SampleToChunkBox {
                                    full_header: FullBoxHeader {
                                        version: 0,
                                        flags: U24Be(
                                            0,
                                        ),
                                    },
                                    entry_count: 1,
                                    entries.len: 1,
                                },
                                stsz: Some(
                                    SampleSizeBox {
                                        full_header: FullBoxHeader {
                                            version: 0,
                                            flags: U24Be(
                                                0,
                                            ),
                                        },
                                        sample_size: 0,
                                        sample_count: 48,
                                        entry_size.len: 48,
                                    },
                                ),
                                stz2: None,
                                stco: Some(
                                    ChunkOffsetBox {
                                        full_header: FullBoxHeader {
                                            version: 0,
                                            flags: U24Be(
                                                0,
                                            ),
                                        },
                                        entry_count: 2,
                                        chunk_offset.len: 2,
                                    },
                                ),
                                co64: None,
                                stss: None,
                                stsh: None,
                                padb: None,
                                stdp: None,
                                sdtp: None,
                                sbgp: [],
                                sgpd: [],
                                subs: [],
                                saiz: [],
                                saio: [],
                                csgp: [],
                            },
                        },
                        unknown_boxes: [],
                    },
                    unknown_boxes: [],
                    udta: None,
                },
            ],
            mvex: None,
            unknown_boxes: [
                UnknownBox {
                    header: BoxHeader {
                        size: Short(
                            33,
                        ),
                        box_type: FourCc(
                            "iods",
                        ),
                    },
                    data.len: 25,
                },
            ],
            udta: None,
        },
    ),
    moof: [],
    mdat: [],
    imda: [],
    meta: None,
    styp: [],
    sidx: [],
    ssix: [],
    prft: [],
    unknown_boxes: [],
    mfra: None,
}
